# pyiotown

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Reference.md
src/iotown/: model.py
src/iotown.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyiotown/: get.py  post.py  post_process.py
src/pyiotown.egg-info/: PKG-INFO  SOURCES.txt
