[metadata]
name = iotown
version = 0.0.1
author = boguen
author_email = boguen@coxlab.kr
description = IoT.own API for DeepLearning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoXlabInc/iotown
project_urls =
    Bug Tracker = https://github.com/CoXlabInc/iotown/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src