[metadata]
name = pyiotown
author = CoXlab Inc.
author-email = support@coxlab.kr
maintainer = Jongsoo Jeong
maintainer-email = jsjeong@coxlab.k
description = IoT.own Library
description-content-type = text/markdown
home-page = https://github.com/CoXlabInc/pyiotow
project_urls =
	Bug Tracker = https://github.com/CoXlabInc/pyiotown/issues
license = MIT
classifier =
	License :: OSI Approved :: MIT License 
	Operating System :: OS Independent
	Programming Language :: Python :: 3
keywords =
	iotown
	iot
	lora

[files]
packages = pyiotown

[pbr]
skip_changelog=1
skip_authors=1
